fix wrap issue on gif-list

--- a/css/favorites.css
+++ b/css/favorites.css
@@ -30,6 +30,7 @@ main {
  
  #gif-list {
      display:flex;
+     flex-wrap: wrap;
      widows: 100%;
      justify-content: center; 
  }
